--- a/Application/EdFi.Ods.SwaggerUI/Web.Base.config
+++ b/Application/EdFi.Ods.SwaggerUI/Web.Base.config
@@ -4,8 +4,8 @@
 <configuration>
   <appSettings file="SwaggerCredential.config">
     <add key="owin:AppStartup" value="SwaggerUiStartup" />
-    <add key="swagger.webApiMetadataUrl" value="http://localhost:54746/metadata/" />
-    <add key="swagger.webApiVersionUrl" value="http://localhost:54746/" />
+    <add key="swagger.webApiMetadataUrl" value="https://localhost:5001/metadata/" />
+    <add key="swagger.webApiVersionUrl" value="https://localhost:5001/" />
     <add key="Microsoft.ServiceBus.X509RevocationMode" value="NoCheck" />
   </appSettings>
   <system.web>
