--- a/Application/EdFi.Ods.SwaggerUI/packages.config
+++ b/Application/EdFi.Ods.SwaggerUI/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EdFi.swagger-ui" version="3.4.0" targetFramework="net48" />
+  <package id="EdFi.swagger-ui" version="3.4.0-b00100netcore" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Diagnostics" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.FileSystems" version="4.1.0" targetFramework="net48" />
