--- a/Application/EdFi.Ods.WebApi/Web.Base.config
+++ b/Application/EdFi.Ods.WebApi/Web.Base.config
@@ -86,8 +86,8 @@
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MsSql2012Dialect</property>
-      <property name="connection.provider">EdFi.Ods.Api.NHibernate.Architecture.EdFiOdsConnectionProvider, EdFi.Ods.Api</property>
-      <property name="connection.driver_class">EdFi.Ods.Api.NHibernate.Architecture.EdFiSql2008ClientDriver, EdFi.Ods.Api</property>
+      <property name="connection.provider">EdFi.Ods.Api.Common.Infrastructure.ConnectionProviders.EdFiOdsConnectionProvider, EdFi.Ods.Api.Common</property>
+      <property name="connection.driver_class">EdFi.Ods.Api.Common.Infrastructure.Architecture.SqlServer.EdFiSql2008ClientDriver, EdFi.Ods.Api.Common</property>
       <property name="connection.connection_string_name">EdFi_Ods</property>
       <property name="connection.isolation">ReadCommitted</property>
       <property name="default_schema">edfi</property>
@@ -227,7 +227,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Json" culture="neutral" publicKeyToken="cc7b13ffcd2ddd51" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
